argocd-ingress-webhook.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-webhook-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx-external
  rules:
  - http:
      paths:
      - path: /api/webhook
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
